tests/error/0011-extraelse.c
/*
PATTERN:

.
*/

#if 1

#else

#else

#endif
